--- a/2024-07-18-sqlalchemy-overview.org
+++ b/2024-07-18-sqlalchemy-overview.org
@@ -455,3 +455,91 @@ databases and object-oriented programming, providing a more intuitive
 and efficient way to interact with databases while improving code
 maintainability, security, and portability.
 
+* Clarification
+
+So, as I can understand the string:
+```
+engine = create_engine('sqlite:///example.db', echo=True)
+```
+initiate database in RAM, not at the hard drive?
+
+#+begin_src markdown
+Actually, the provided string:
+
+```org
+#+begin_src python
+engine = create_engine('sqlite:///example.db', echo=True)
+#+end_src
+```
+
+initializes a connection to an SQLite database stored in a file named `example.db` located in the current working directory on the hard drive. The `sqlite:///example.db` URL indicates that SQLite should use a file-based database.
+
+**Explanation of the Connection URL:**
+- `sqlite://`: Specifies that the SQLite dialect should be used.
+- `/example.db`: Indicates that the database file `example.db` is located in the current working directory.
+
+If you want to create a SQLite database in RAM (which resides in memory and is ephemeral), you need to modify the connection string as follows:
+
+```org
+#+begin_src python
+engine = create_engine('sqlite:///:memory:', echo=True)
+#+end_src
+```
+
+**Explanation of the In-Memory Connection URL:**
+- `sqlite://`: Specifies that the SQLite dialect should be used.
+- `/:memory:`: Indicates that the SQLite database should be created in RAM.
+
+**Example Initializing a Database in RAM:**
+```org
+#+begin_src python
+from sqlalchemy import create_engine, Table, Column, Integer, String, MetaData
+from sqlalchemy.ext.declarative import declarative_base
+from sqlalchemy.orm import sessionmaker
+
+# Create an engine that uses an in-memory SQLite database
+engine = create_engine('sqlite:///:memory:', echo=True)
+metadata = MetaData()
+Base = declarative_base()
+
+# Define a Table and ORM model
+user_table = Table('users', metadata,
+                   Column('id', Integer, primary_key=True),
+                   Column('name', String),
+                   Column('age', Integer))
+
+class User(Base):
+    __tablename__ = 'users'
+    id = Column(Integer, primary_key=True)
+    name = Column(String)
+    age = Column(Integer)
+
+# Create the table in the in-memory database
+metadata.create_all(engine)
+
+# Create a session
+Session = sessionmaker(bind=engine)
+session = Session()
+
+# Add a new user to the in-memory database
+new_user = User(name="Alice", age=30)
+session.add(new_user)
+session.commit()
+
+# Query the in-memory database
+for user in session.query(User).all():
+    print(user.id, user.name, user.age)
+#+end_src
+```
+
+**Points to Note:**
+1. **Persistence:** The `example.db` file persists on the filesystem, making the database durable until manually deleted.
+2. **In-Memory Database:** The `:memory:` database is temporary, meaning it is lost when the program exits. It is useful for testing or situations where you need a fast, transient database.
+3. **Connection URL Details:**
+   - `sqlite:///example.db`: File-based SQLite database on disk.
+   - `sqlite:///:memory:`: In-memory SQLite database.
+
+In conclusion, to create a database in RAM, you need to use
+`sqlite:///:memory:`, whereas `sqlite:///example.db` creates a durable
+database file on the hard drive.  #+end_src
+
